k8s/node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: node
  name: node
  namespace: techchallenge
spec:
   replicas: 1
   strategy:
        type: RollingUpdate
   selector:
     matchLabels:
       app: node 
   template:
    metadata:
       labels:
          app: node
    spec:      
      imagePullSecrets:
              - name: tech-acr-secret
      containers:
      - image: swethaacr.azurecr.io/techchallenge:v6.0.0
        imagePullPolicy: IfNotPresent
        name: node
        resources: {}
        ports:
          - containerPort: 4000          
      dnsPolicy: ClusterFirst
      restartPolicy: Always


---
apiVersion: v1
kind: Service
metadata:
   name: node
   namespace: techchallenge
spec:
   ports:
     - port: 4000
   selector:
      app: node
