k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: postgres
   namespace: techchallenge
spec:
   replicas: 1
   revisionHistoryLimit: 3
   strategy:
        type: RollingUpdate
   selector:
     matchLabels:
       app: postgres
   template:
     metadata:
       labels:
         app: postgres
     spec:     
        containers:
          - name: postgres
            image: postgres:12.1
            imagePullPolicy: IfNotPresent
            resources: {}              
            ports:
              - containerPort: 5432         
        restartPolicy: Always        

---
apiVersion: v1
kind: Service
metadata:
   name: postgres
   namespace: techchallenge
spec:
   ports:
     - port: 5432
       targetPort: 5432
   selector:
      app: postgres
   clusterIP: None
