k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
    name: node-ingress
    namespace: techchallenge
    annotations:
      kubernetes.io/ingress.class: kong
      cert-manager.io/cluster-issuer: letsencrypt-prod
      configuration.konghq.com: ingress-https

spec:
   tls:
    - hosts:
        - techchallenge.australiaeast.cloudapp.azure.com 
      secretName: node-tls-secret
   rules:
    - host: techchallenge.australiaeast.cloudapp.azure.com
      http:
        paths:
          - backend:
              serviceName: node
              servicePort: 4000
            path: /
